Fixed Discount Word-Wrap Bug on Mobile

--- a/style.css
+++ b/style.css
@@ -216,7 +216,6 @@ select {
 }
 
 #discountWrapper {
-  height:5vh;
   background-color: #ec3c3c;
   color: #FFFFFF;
   padding: 1%;
